K8s/ingress/nacos-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nacos-ingress
  namespace: game-server
spec:
  ingressClassName: nginx
  rules:
  - host: nacos.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nacos
            port:
              number: 8848
